--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="hero min-h-[60vh]" style="background-image:linear-gradient(0deg,
                 rgba(128, 128, 128, 0.114),
                 rgba(0, 0, 0, 0.77)), url('./images/banner1.png');">
-          <div class="hero-content text-center text-neutral-content">
+          <div class="text-white text-center text-neutral-content">
             <div class="max-w-md">
               <h1 class="mb-5 text-5xl font-bold">Exotic tastes at your doorstep</h1>
               <p class="mb-5">We supply highly quality organic products</p>
@@ -80,7 +80,7 @@
         <div class="hero min-h-[60vh]" style="background-image:linear-gradient(0deg,
                 rgba(128, 128, 128, 0.114),
                 rgba(0, 0, 0, 0.77)), url('./images/banner2.png');">
-          <div class="hero-content text-center text-neutral-content">
+          <div class="text-white text-center text-neutral-content">
             <div class="max-w-md">
               <h1 class="mb-5 text-5xl font-bold">Exotic tastes at your doorstep</h1>
               <p class="mb-5">We supply highly quality organic products</p>
@@ -97,7 +97,7 @@
         <div class="hero min-h-[60vh]" style="background-image:linear-gradient(0deg,
                 rgba(128, 128, 128, 0.114),
                 rgba(0, 0, 0, 0.77)), url('./images/banner1.png');">
-          <div class="hero-content text-center text-neutral-content">
+          <div class="text-white text-center text-neutral-content">
             <div class="max-w-md">
               <h1 class="mb-5 text-5xl font-bold">Exotic tastes at your doorstep</h1>
               <p class="mb-5">We supply highly quality organic products</p>
@@ -114,7 +114,7 @@
         <div class="hero min-h-[60vh]" style="background-image:linear-gradient(0deg,
                 rgba(128, 128, 128, 0.114),
                 rgba(0, 0, 0, 0.77)), url('./images/banner1.png');">
-          <div class="hero-content text-center text-neutral-content">
+          <div class="text-white text-center text-neutral-content">
             <div class="max-w-md">
               <h1 class="mb-5 text-5xl font-bold">Exotic tastes at your doorstep</h1>
               <p class="mb-5">We supply highly quality organic products</p>
@@ -128,11 +128,35 @@
         </div>
       </div>
     </div>
+    <!-- nokta start -->
+    <section class="lg:flex gap-12 justify-center p-6 items-center lg:relative hidden -top-20 bg-white w-fit mx-auto shadow-md rounded-lg">
+      <div class="text-center">
+        <img class="w-24" src="./images/fruit1.png" alt="#">
+        <h3>Grapes</h3>
+      </div>
+      <div class="">
+        <img class="w-24" src="./images/fruit2.png" alt="#">
+        <h3>Oranges</h3>
+      </div>
+      <div class="">
+        <img class="w-24" src="./images/fruit3.png" alt="#">
+        <h3>Mangoes</h3>
+      </div>
+      <div class="">
+        <img class="w-24" src="./images/fruit4.png" alt="#">
+        <h3>Strawberries</h3>
+      </div>
+      <div class="">
+        <img class="w-24" src="./images/fruit5.png" alt="#">
+        <h3>Pomegranates</h3>
+      </div>
+    </section>
+    <!-- nokta end -->
     <!-- carousel end -->
   </header>
   <main class="mx-4 lg:mx-60">
     <!-- deal start -->
-    <section class="my-20">
+    <section class="my-10">
       <div class="lg:flex lg:justify-between">
         <div class="w-fit text-center mx-auto lg:mx-0 lg:text-start mb-7 lg:mb-0">
           <h3 class="font-extrabold text-2xl">Deal of the day</h3>
@@ -362,7 +386,7 @@
     </div>
     <!-- deal end -->
     <!-- meet the team start -->
-    <div class="hero min-h-[60vh] mb-14" style="background-image:linear-gradient(45deg,
+    <div class="hero min-h-[60vh] mb-14 py-6" style="background-image:linear-gradient(45deg,
       rgba(0,0,0, 0.6),
       rgba(0,0,0, 0.6)), url('./images/banner1.png');">
       <div class="text-center text-neutral-content">
@@ -420,16 +444,16 @@
   <!-- footer start -->
     <footer class="footer footer-center p-10 bg-black min-h-[40vh]">
       <div>
-        <a class="border-0 font-bold text-xl lg:text-white flex gap-1 items-center"><img
+        <a class="border-0 font-bold text-xl text-white flex gap-1 items-center"><img
           src="./images/logo.png" class="w-7" alt="">Fruit Burst</a>
       </div>
-      <div class="grid grid-flow-col gap-12 text-md text-white">
+      <div class="grid grid-cols-4 lg:grid-cols-6 gap-8 text-md text-white">
         <p>Home</p>
         <p>About Us</p>
         <p>Shop</p>
         <p>All Fruits</p>
-        <p>Support</p>
-        <p>My Account</p>
+        <p class="col-span-2 lg:col-span-1">Support</p>
+        <p class="col-span-2 lg:col-span-1">My Account</p>
       </div>
       <div>
         <div class="grid grid-flow-col gap-4 text-xl text-white">
