--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
           </svg>
         </label>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-max">
-          <li><a>Home</a></li>
-          <li><a>About Us</a></li>
-          <li><a>Shop</a></li>
-          <li><a>All Fruits</a></li>
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box gap-1">
+          <li><a class="bg-[#F85559] text-white">Home</a></li>
+          <li><a class="bg-[#F85559] text-white">About Us</a></li>
+          <li><a class="bg-[#F85559] text-white">Shop</a></li>
+          <li><a class="bg-[#F85559] text-white">All Fruits</a></li>
         </ul>
       </div>
     </div>
